<resources>
    <string name="app_name">Notes</string>
    <string name="app_title">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Your note goes here..</string>
    <string name="miscellaneous">More Options</string>
    <string name="pick_color">Note Color</string>
    <string name="value_color">%s</string>
    <string name="add_image">Add image</string>
    <string name="add_url">Add URL</string>
    <string name="new_urk">ex: https://abcxyz.com</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="add_new_note">Add new note</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete note</string>
    <string name="add_success_confirm">Add new note successfully!</string>
    <string name="update_success_confirm">Note updated successfully!</string>
    <string name="confirm">Confirm</string>
    <string name="quit">Quit</string>
    <string name="delete_note_confirm">Are you sure you want to delete this note?!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_note_title_err">Note title can not be blank!</string>
    <string name="empty_note_err">Note can not be blank!</string>
    <string name="empty_url_err">URL can not be blank!</string>
    <string name="invalid_url_err">URL not valid!</string>
</resources>