<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_search"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_url"
            android:textAlignment="center"
            android:fontFamily="@font/ubuntu"
            android:includeFontPadding="false"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/defaultNoteColor"
            android:paddingVertical="@dimen/_8sdp"
            android:background="@drawable/border_bottom"/>

        <EditText
            android:id="@+id/edt_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13ssp"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_6sdp"
            android:background="@android:color/transparent"
            android:hint="@string/new_urk"
            android:paddingVertical="@dimen/_8sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntu"
            android:includeFontPadding="false"
            tools:ignore="Autofill,TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_6sdp"
            android:background="@drawable/border_top">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/deleteColor"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/cancel"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/textHintColor"/>

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/noteColor4"
                android:text="@string/add"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>