<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.create_note.CreateNoteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:id="@+id/back_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ibtn_back"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_arrow_left"/>

                <TextView
                    android:id="@+id/tv_my_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:textColor="@color/accentColor"
                    android:text="@string/app_title"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/ibtn_save"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/bg_done_btn"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_done"
                app:layout_constraintBottom_toBottomOf="@+id/back_container"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/back_container" />

            <EditText
                android:id="@+id/edt_note_title"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionNone"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/textHintColor"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/back_container"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/tv_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:includeFontPadding="false"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/app_name"
                android:textColor="@color/iconsColor"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@+id/edt_note_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/edt_note_title" />

            <View
                android:id="@+id/divider"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:background="@drawable/bg_sub_title_divider"
                app:layout_constraintBottom_toBottomOf="@+id/edt_note_sub_title"
                app:layout_constraintStart_toStartOf="@+id/tv_datetime"
                app:layout_constraintTop_toTopOf="@+id/edt_note_sub_title" />

            <EditText
                android:id="@+id/edt_note_sub_title"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/note_subtitle"
                android:imeOptions="actionNone"
                android:inputType="text"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColorHint="@color/textHintColor"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/tv_datetime"
                tools:ignore="Autofill" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_12sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/_12sdp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/note_image_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/edt_note_sub_title">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/rimv_note_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:scaleType="centerCrop"
                    app:riv_corner_radius="@dimen/_6sdp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ibtn_remove_image"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:src="@drawable/ic_baseline_remove"
                    app:layout_constraintEnd_toEndOf="@+id/rimv_note_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/app_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:autoLink="web"
                android:visibility="gone"
                android:linksClickable="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp"
                android:drawableRight="@drawable/ic_baseline_remove"
                android:textColor="@color/noteColor4"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/note_image_container"/>

            <EditText
                android:id="@+id/edt_note_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:imeOptions="actionNone"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/textHintColor"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/tv_url"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="Autofill" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_more_options_bottom_sheet"
        android:id="@+id/layout_options"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>